--- a/utils/rendering/component-template.html
+++ b/utils/rendering/component-template.html
@@ -33,8 +33,8 @@
 <h3>Changelog:</h3>
 {{% if component.changelog %}}
 <ul>
-{{% for chg in component.changelog %}}
-<li>{{{ chg }}}</li>
+{{% for entry in component.changelog %}}
+<li>{{{ entry }}}</li>
 {{% endfor %}}
 </ul>
 {{% else %}}
